slideout menu working

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Brian M Low | Graphic Design</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/site.css">
 	<style>
 	</style>
@@ -18,68 +17,62 @@
 		<a href="index.html">
 			<img src="assets/bml-logo.png" width="270">
 		</a>
+		<!-- hamburger menu -->
+		<img id="nav-toggle" src="assets/nav-toggle.svg" aria-controls="top-nav" aria-expanded="false" aria-label="Toggle navigation"></img>
 	</header>
 
-	<!-- hamburger menu -->
-
-	<img id="nav-toggle" src="assets/nav-toggle.svg" aria-controls="top-nav" aria-expanded="false" aria-label="Toggle navigation"></img>
-
-	<!-- slideout menu -->
-
-	<section id="top-nav" class="container-fluid no-padding">
-		<div class="wrapper">
-			<div class="menu">
-					menu
+	<div id="main">
+		<!-- slideout menu -->
+		<section id="top-nav">
+			<div class="wrapper">
+				<div class="menu">
+					<ul>
+						<li>home</li>
+						<li>about me</li>
+						<li>my work</li>
+						<li>contact</li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	
+		<!-- slideshow -->
+		<section id="slides">
+			slides
+		</section>
 
-	<!-- slideshow -->
-
-	<section id="slides" class="container-fluid no-padding">
-		slides
-	</section>
-
-	<!-- tagline -->
-
-	<section id="tagline" class="container-fluid">
-		tagline
-	</section>
-
-	<!-- featured projects -->
-
-	<section id="featured-projects" class="container-fluid no-padding">
-		<header>Featured Projects</header>
-		<article class="project">
-			project 1
-		</article>
-		<article class="project">
-			project 2
-		</article>
-		<article class="project">
-			project 3
-		</article>
-		<article class="project">
-			project 4
-		</article>
-	</section>
+		<!-- tagline -->
+		<section id="tagline">
+			tagline
+		</section>
+	
+		<!-- featured projects -->
+		<section id="featured-projects">
+			<header>Featured Projects</header>
+			<article class="project">
+				project 1
+			</article>
+			<article class="project">
+				project 2
+			</article>
+			<article class="project">
+				project 3
+			</article>
+			<article class="project">
+				project 4
+			</article>
+		</section>
+		
+	</div>
 
 	<!-- footer -->
-
 	<footer class="fixed-bottom">
-		footer
+		&copy; 2019 Brian M Low. All Rights Reserved.
 	</footer>
 
 	<!-- scripts -->
-
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
 	
 	<script>
