--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,18 +10,16 @@
 	<style>
 	</style>
 </head>
-
 <body>
 	<header>
 		<a href="index.html">
 			<img src="assets/bml-logo.png">
 		</a>
-		<img id="menu-toggle" src="assets/menu-toggle.svg" aria-controls="slideout-menu" aria-expanded="false" aria-label="Toggle navigation"></img>
+		<img id="menu-toggle" src="assets/menu-toggle.svg"></img>
 	</header>
-
 	<div id="main">
 		<section id="slideout-menu">
-			<div class="wrapper">
+			<div class="container">
 				<nav class="menu">
 					<ul>
 						<li><a href="#">home</a></li>
@@ -33,50 +30,62 @@
 				</nav>
 			</div>
 		</section>
-	
-		<section id="slides">
-			slides
+		<section id="slideshow">
+			<img src="assets/slideshow/urbantilt.png" />
 		</section>
-
 		<section id="tagline">
-			tagline
+			<header>my tagline</header>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dignissim at est elementum convallis. 
+				Vestibulum id purus non tellus tincidunt convallis. Curabitur eu luctus nibh. Cras nisi justo, tempus id imperdiet id, 
+				blandit vel sem. Vivamus commodo ante sit amet tristique aliquet. Nullam eu gravida augue. Maecenas viverra sodales ante, 
+				eget maximus mi gravida eu. Fusce consequat risus a lacinia sollicitudin. Suspendisse vel dolor vitae lorem posuere commodo 
+				vitae non mauris. Cras vitae rhoncus velit. Donec quis nibh pellentesque, sollicitudin purus eu, porta nisl. Vestibulum 
+				tempor, nisi id blandit semper, ante felis dictum augue, nec facilisis nulla sapien ac purus.
+			</p>
 		</section>
-	
 		<section id="featured-projects">
 			<header>Featured Projects</header>
-			<article class="project">
-				project 1
+			<article>
+				<img src="assets/featured-projects/crayola.png" />
 			</article>
-			<article class="project">
-				project 2
+			<article>
+				<img src="assets/featured-projects/inside.png" />
 			</article>
-			<article class="project">
-				project 3
+			<article>
+				<img src="assets/featured-projects/crayola.png" />
 			</article>
-			<article class="project">
-				project 4
+			<article>
+				<img src="assets/featured-projects/inside.png" />
+			</article>
+			<article>
+				<img src="assets/featured-projects/crayola.png" />
+			</article>
+			<article>
+				<img src="assets/featured-projects/crayola.png" />
+			</article>
+			<article>
+				<img src="assets/featured-projects/inside.png" />
+			</article>
+			<article>
+				<img src="assets/featured-projects/crayola.png" />
+			</article>
+			<article>
+				<img src="assets/featured-projects/inside.png" />
 			</article>
 		</section>
-		
 	</div>
-
 	<footer class="fixed-bottom">
 		&copy; 2019 Brian M Low. All Rights Reserved.
 	</footer>
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	
+	<script src="scripts/jquery-3.3.1.slim.min.js"></script>
 	<script>
-			$(function() {
-				$('#menu-toggle').click(function() {
-					var isOpen = !$(this).hasClass('open');
-					$(this).toggleClass('open').attr('aria-expanded', isOpen ? 'true' : 'false');
-					$('#slideout-menu').toggleClass('open');
-				});
+		$(function() {
+			$('#menu-toggle').click(function() {
+				$(this).toggleClass('open');
+				$('#slideout-menu').toggleClass('open');
 			});
-		</script>
-	
+		});
+	</script>
 </body>
 </html>
