using float for projects

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</nav>
 			</div>
 		</section>
-		<section id="slideshow" class="hidden">
+		<section id="slideshow">
 			<div class="slide">
 				<img src="assets/slideshow/urbantilt.png" />
 				<!-- <div class="overlay">
@@ -40,66 +40,38 @@
 				</div> -->
 			</div>
 		</section>
-		<section id="tagline" class="hidden">
+		<section id="tagline">
 			<header>Deep Thoughts &trade;</header>
 			<p><!-- random  content here --></p>
 		</section>
-		<!-- <section id="featured-projects">
+		<section id="featured-projects">
 			<header>Featured Projects</header>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/inside.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/inside.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/inside.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/inside.png" />
-			</article>
-		</section> -->
-		<section id="featured-projects-flex" class="flexbox flexbox-row">
-			<!-- <header>Featured Projects</header> -->
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/inside.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/inside.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/inside.png" />
-			</article>
-			<article>
-				<img src="assets/featured-projects/crayola.png" />
-			</article>
+			<div class="container">
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/inside.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/inside.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/inside.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+			</div>
 		</section>
 	</div>
 	<footer class="fixed-bottom">
@@ -109,7 +81,7 @@
 	<script>
 		var deepThoughts = [
 			"If I ever opened a trampoline store, I don't think I'd call it Trampo-Land, because you might think it was a store for tramps, which is not the impression we are trying to convey with our store. On the other hand, we would not prohibit tramps from browsing, or testing the trampolines, unless a tramp's gyrations seemed to be getting out of control.",
-			"If you're ever stuck in some thick undergrowth, in your underwear, don't stop and think of what other words have 'under' in them, because that's probably the first sign of jungle madness.",
+			"If you're ever stuck in some thick undergrowth in your underwear, don't stop and think of what other words have 'under' in them, because that's probably the first sign of jungle madness.",
 			"It makes me mad when people say I turned and ran like a scared rabbit. Maybe it was like an angry rabbit, who was running to go fight in another fight, away from the first fight.",
 			"The memories of my family outings are still a source of strength to me. I remember we'd all pile into the car - I forget what kind it was - and drive and drive. I'm not sure where we'd go, but I think there were some trees there. The smell of something was strong in the air as we played whatever sport we played. I remember a bigger, older guy we called 'Dad'. We'd eat some stuff, or not, and then I think we went home. I guess some things never leave you."
 		];
