--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</section>
 		<section id="slideshow">
 			<div class="slide">
-				<img src="assets/slideshow/urbantilt.png" />
+				<img src="assets/slideshow/urbantilt.png" height="100" />
 				<!-- <div class="overlay">
 					<div class="industry">Industry | Photography</div>
 					<div class="title">UrbanTilt</div>
@@ -61,6 +61,9 @@
 				</article>
 				<article>
 					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/inside.png" />
 				</article>
 				<article>
 					<img src="assets/featured-projects/crayola.png" />
