ready for hover effects

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</section>
 		<section id="slideshow">
 			<div class="slide">
-				<img src="assets/slideshow/urbantilt.png" height="100" />
+				<img src="assets/slideshow/urbantilt.png" />
 				<!-- <div class="overlay">
 					<div class="industry">Industry | Photography</div>
 					<div class="title">UrbanTilt</div>
