--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 		<section id="slideshow">
 			<div class="slide">
 				<img src="assets/slideshow/urbantilt.png" />
-				<!-- <div class="overlay">
+				<div class="overlay">
 					<div class="industry">Industry | Photography</div>
 					<div class="title">UrbanTilt</div>
-					<div class="link">View Project</div>
-				</div> -->
+					<a href="#" class="link">View Project</a>
+				</div>
 			</div>
 		</section>
 		<section id="tagline">
@@ -46,34 +46,61 @@
 		</section>
 		<section id="featured-projects">
 			<header>Featured Projects</header>
+			<!-- <div class="container">
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/inside.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/inside.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/inside.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/inside.png" />
+				</article>
+				<article>
+					<img src="assets/featured-projects/crayola.png" />
+				</article>
+			</div> -->
 			<div class="container">
-				<article>
-					<img src="assets/featured-projects/crayola.png" />
+				<article class="crayola">
+					<div class="mask">
+						<div class="overlay">
+							<div class="industry">Industry | Consumer Goods</div>
+							<div class="title">Crayola</div>
+							<a href="#" class="link">View Project</a>
+						</div>
+					</div>
 				</article>
-				<article>
-					<img src="assets/featured-projects/inside.png" />
-				</article>
-				<article>
-					<img src="assets/featured-projects/crayola.png" />
-				</article>
-				<article>
-					<img src="assets/featured-projects/inside.png" />
-				</article>
-				<article>
-					<img src="assets/featured-projects/crayola.png" />
-				</article>
-				<article>
-					<img src="assets/featured-projects/inside.png" />
-				</article>
-				<article>
-					<img src="assets/featured-projects/crayola.png" />
-				</article>
-				<article>
-					<img src="assets/featured-projects/inside.png" />
-				</article>
-				<article>
-					<img src="assets/featured-projects/crayola.png" />
-				</article>
+				<article class="inside">
+					<div class="mask">
+							<div class="overlay">
+								<div class="industry">Industry | Entertainment</div>
+								<div class="title">Inside Nightclub</div>
+								<a href="#" class="link">View Project</a>
+							</div>
+						</div>
+					</article>
+				<article class="crayola"></article>
+				<article class="inside"></article>
+				<article class="crayola"></article>
+				<article class="inside"></article>
+				<article class="crayola"></article>
+				<article class="inside"></article>
+				<article class="crayola"></article>
 			</div>
 		</section>
 	</div>
