--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </section>
     <section id="slideshow">
-      <figure class="slide active-slide">
+      <figure class="slide active-slide dark-text">
         <img src="assets/slideshow/urbantilt.png" />
         <figcaption class="overlay">
           <div class="industry">Industry | Photography</div>
@@ -40,7 +40,7 @@
           <a href="#" class="link">View Project</a>
         </figcaption>
       </figure>
-      <figure class="slide">
+      <figure class="slide light-text">
         <img src="assets/slideshow/tutu.png" />
         <figcaption class="overlay">
           <div class="industry">Industry | Food &amp; Beverage</div>
@@ -61,81 +61,81 @@
         <article class="inside">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Legal</div>
-              <div class="title offscreen-left">Bennet Jones LLP</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Legal</div>
+              <div class="title">Bennet Jones LLP</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
         <article class="crayola">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Consumer Goods</div>
-              <div class="title offscreen-left">Crayola</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Consumer Goods</div>
+              <div class="title">Crayola</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
         <article class="inside">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Architecture</div>
-              <div class="title offscreen-left">HOK</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Architecture</div>
+              <div class="title">HOK</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
         <article class="crayola">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Food &amp; Beverage</div>
-              <div class="title offscreen-left">Tutu Garden</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Food &amp; Beverage</div>
+              <div class="title">Tutu Garden</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
         <article class="inside">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Motorcycles</div>
-              <div class="title offscreen-left">Kawasaki</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Motorcycles</div>
+              <div class="title">Kawasaki</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
         <article class="crayola">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Medical</div>
-              <div class="title offscreen-left">Spectral Diagnostics</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Medical</div>
+              <div class="title">Spectral Diagnostics</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
         <article class="inside">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Photography</div>
-              <div class="title offscreen-left">Vanessa Galle</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Photography</div>
+              <div class="title">Vanessa Galle</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
         <article class="crayola">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Legal</div>
-              <div class="title offscreen-left">Gowlings LLP</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Legal</div>
+              <div class="title">Gowlings LLP</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
         <article class="inside">
           <div class="mask">
             <div class="overlay">
-              <div class="industry offscreen-left">Industry | Entertainment</div>
-              <div class="title offscreen-left">Inside Nightclub</div>
-              <a href="#" class="link offscreen-left">View Project</a>
+              <div class="industry">Industry | Entertainment</div>
+              <div class="title">Inside Nightclub</div>
+              <a href="#" class="link">View Project</a>
             </div>
           </div>
         </article>
