added urbantilt page with lazy image loading

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     </a>
     <img id="menu-toggle" src="assets/menu-toggle.svg" />
   </header>
-  <div id="main">
-    <section id="slideout-menu">
+  <div id="slideout-menu">
       <div class="container">
         <nav>
           <ul>
@@ -30,7 +29,8 @@
           </ul>
         </nav>
       </div>
-    </section>
+    </div>
+  <div id="main">
     <section id="slideshow">
       <figure class="slide active-slide dark-text">
         <img src="assets/slideshow/urbantilt.png" />
