add tutu garden, fix text over darkened image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="assets/slideshow/urbantilt.png" />
         <figcaption class="overlay">
           <div class="industry">Industry | Photography</div>
-          <div class="title">UrbanTilt</div>
+          <div class="title">urbantilt</div>
           <a href="#" class="link">View Project</a>
         </figcaption>
       </figure>
