--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <div class="mask">
             <div class="overlay">
               <div class="industry">Industry | Legal</div>
-              <div class="title">Bennet Jones LLP</div>
-              <a href="#" class="link">View Project</a>
+              <div class="title">Bennett Jones LLP</div>
+              <a href="" class="link">View Project</a>
             </div>
           </div>
         </article>
